examples/static-file-server/manifests/tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-file-server
spec:
  selector:
    app: static-file-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-file-server
  labels:
    app: static-file-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-file-server
  template:
    metadata:
      labels:
        app: static-file-server
    spec:
      containers:
        - name: static-file-server
          image: envoyproxy/gateway-static-file-server
          imagePullPolicy: IfNotPresent
          args:
            - "--certPath=/app/certs"
            - "--port=8443"
          volumeMounts:
            - name: secret-volume
              mountPath: /app/certs
      volumes:
        - name: secret-volume
          secret:
            secretName: static-file-server-tls
