examples/static-file-server/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: static-file-server
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /jwt
        - path:
            type: PathPrefix
            value: /wasm
---
